Bug 508659 - Assert searching in the Diagnostics Viewer
Summary: Assert searching in the Diagnostics Viewer
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-23 20:36 UTC by Allen Winter
Modified: 2025-08-24 15:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
assert in diagnostics viewer (5.86 KB, text/plain)
2025-08-23 20:36 UTC, Allen Winter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Allen Winter 2025-08-23 20:36:26 UTC
Created attachment 184389 [details]
assert in diagnostics viewer

From master git branch I build myself this morning...

I got an assert when using the search bar in the diagnostics viewer 
the diagnostics viewer had quite a few items for clangd on a large set of files

I'll attach the bt
Comment 1 Allen Winter 2025-08-23 20:38:23 UTC
I might have tried to close one of the files while the search was in-progress.
Comment 2 Christoph Cullmann 2025-08-24 15:53:49 UTC
Git commit d21280d508513f5ed2cd58b6a2e439b926e96abd by Christoph Cullmann.
Committed on 24/08/2025 at 15:53.
Pushed by cullmann into branch 'master'.

be more defensive

we don't need to assert if we just didn't find stuff to show
return false if nothing found

M  +10   -11   apps/lib/diagnostics/diagnosticview.cpp

https://invent.kde.org/utilities/kate/-/commit/d21280d508513f5ed2cd58b6a2e439b926e96abd