be more defensive

we don't need to assert if we just didn't find stuff to show
return false if nothing found
BUG: 508659